trying to fix tickets on mobile

--- a/Festival.css
+++ b/Festival.css
@@ -480,7 +480,7 @@ input:checked + .select:before {
 }
 
 .info {
-  z-index: 109201392098;
+  z-index: 99;
   position: fixed;
   top: 10%;
   right: 0;
@@ -936,8 +936,8 @@ footer .lightgray {
 .popup {
     position: fixed;
     top: 0;
-    width: 80% !important;
-    height: auto !important;
+    width: 80%;
+    height: auto;
     opacity: 0;
     overflow: hidden;
     transition: opacity 0.5s ease;
@@ -958,14 +958,26 @@ footer .lightgray {
     font-size: 2em;
 }
 
-#tickets {
-    padding: 0px;
+.ticket_popup {
+    position: absolute;
+    width: 80%;
+    height: auto;
+    transform: translate(-50%, 0%);
+    top: 50px;
+    left: 50%;
+    opacity: 0;
+    overflow: hidden;
+    transition: opacity 0.5s ease;
+    color: #111;
+    background: white;
+    padding: 50px;
+    z-index: -1;
 }
 
 .opened {
     opacity: 1 !important;
     transition: opacity 1.2s ease;
-    z-index: 10;
+    z-index: 999;
 }
 
 .partone {
@@ -1129,9 +1141,6 @@ a.lightgray {
 
     #sTwo {
         left: 800px;
-    }
-    #tickets {
-        padding-left: 8px;
     }
 }
 
@@ -1508,14 +1517,6 @@ a.lightgray {
         padding-right: 0px;
         padding-left: 0px;
         margin: 0px;
-    }
-    .popup {
-        width: 87% !important;
-        left: 10px;
-        transform: translate(0%, -50%);
-    }
-    #tickets {
-        padding-left: 8px;
     }
     .close {
         right: 4px;
